Oct 24 2000 - Tim Hurman (kano@kano.org.uk)
pxe 1.0 released.