@@ -1,2 +1,6 @@
 Oct 24 2000 - Tim Hurman (kano@kano.org.uk)
+pxe 1.1 released.
+OpenBSD support added
+
+Oct 24 2000 - Tim Hurman (kano@kano.org.uk)
 pxe 1.0 released.
